--- a/styles/sr-fonts.css
+++ b/styles/sr-fonts.css
@@ -15,6 +15,8 @@ body.game.foundry-modern .app {
     --font-sans: "Play", serif;
     --font-h3-size: var(--font-size-24);
     --font-h4-size: var(--font-size-20);
+}
+body.game.foundry-modern .application.journal-sheet {
     --color-text-emphatic: #892378;
     --color-text-primary: #892378;
     --color-text-secondary: #892378;
