--- a/templates/item/shadowrun6-metamagic-sheet.html
+++ b/templates/item/shadowrun6-metamagic-sheet.html
@@ -6,9 +6,9 @@
         <div class="section">
             <table>
                 <tr>
-                    <th colspan="1">{{localize 'shadowrun6.label.level'}}</th>
-                    <th colspan="2">{{localize 'shadowrun6.label.adepts'}}</th>
-                    <th colspan="2">{{localize 'shadowrun6.label.mages'}}</th>
+                    <th>{{localize 'shadowrun6.label.level'}}</th>
+                    <th>{{localize 'shadowrun6.label.adepts'}}</th>
+                    <th>{{localize 'shadowrun6.label.mages'}}</th>
                 </tr>
                 <tr style="text-align:center">
                     <td>
@@ -17,7 +17,7 @@
                     <td>
                         <input name="adepts" style="vertical-align: middle;" type="checkbox" {{checked item.system.adepts}} data-field="system.adepts" />
                     </td>
-                    <td colspan="2">
+                    <td>
                         <input name="mages" style="vertical-align: middle;" type="checkbox" {{checked item.system.mages}} data-field="system.mages" />
                     </td>
                 </tr>
