--- a/styles/color-light.css
+++ b/styles/color-light.css
@@ -67,12 +67,6 @@ body.theme-light .application {
 	cursor: pointer;
 }
 
-.app.window-app.shadowrun6 .window-content  {
-	background-image: url("../images/borderRight.webp"), url("../images/background.webp");
-	background-position: right top, left top;
-	background-repeat: no-repeat, repeat;
-}
-
 .themed.theme-light .app.window-app.dialog .window-content, 
 .themed.theme-light #chat-form textarea,
 .themed.theme-light .window-app .window-content,
@@ -82,16 +76,24 @@ body.game .app.window-app .window-content,
 	background: url("/systems/shadowrun6-eden/images/background.webp") repeat;
 	background-position: left top;
 }
+
+body.game .sheet.journal-entry .journal-entry-content,
+body.game .shadowrun6.actor .window-content {
+	background-image: url("../images/borderRight.webp"), url("../images/background.webp");
+	background-position: right top, left top;
+	background-repeat: no-repeat, repeat;
+	scrollbar-gutter: stable;
+}
+
 body.game .app.window-app.sidebar-popout .window-content {
 	background-image: none;
 	background: rgba(0, 0, 0, 0.3);
 }
 
-body.game .app.window-app.journal-sheet .window-content {
+body.game .sheet.journal-sheet .window-content {
 	background-image: none;
 }
-body.game .app.window-app.journal-sheet .window-content .editable,
-.sheet.journal-entry .journal-entry-content {
+body.game .sheet.journal-entry-page .window-content {
 	background: url("/systems/shadowrun6-eden/images/background.webp") repeat;
 }
 
