--- a/templates/parts/section-critterpower.html
+++ b/templates/parts/section-critterpower.html
@@ -29,7 +29,7 @@
 				</label>
 				{{/iff}}
 			</td>
-			<td class="centered">
+			<td class="centered" style="text-wrap: nowrap;">
 				{{!-- <a class="item-control critterpower-roll" data-type="Roll" data-uuid="{{item.uuid}" data-item-id="{{item.id}" title="Roll"><i class="fas fa-dice-six"></i></a> --}}
 				<a class="item-control item-edit"   title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
