--- a/templates/parts/section-metamagics.html
+++ b/templates/parts/section-metamagics.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; min-width: 380px;">
+<div class="section" style="display: inline-block; min-width: 380px; width: 90%;">
  <div class="section-head">
 	<h2 class="section-title">{{ localize 'shadowrun6.section.metamagic.title' }}</h2>
 	<a class="item-control metamagic-create" title="{{localize 'shadowrun6.section.metamagic.add' }}">
