Add empty Skill option for Weapon Items so it's forced to select on Item creation (#117)

--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -112,7 +112,7 @@
                 <tr>
                     <td style="text-align: center">
                         <select name="gearSkill" data-field="system.skill" data-field="system.skill">
-                            {{selectOptions config.SKILLS_WEAPON selected=item.system.skill localize=true}}
+                            {{selectOptions config.SKILLS_WEAPON selected=item.system.skill localize=true blank=(localize "shadowrun6.label.none")}}
                         </select>
                     </td>
                     <td style="text-align: center">
