--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -17,9 +17,10 @@
             <td style="width: 10%"><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
             <td style="width: 15%"><label class="middle-column" >{{attackrating item.calculated.attackRating}}</label></td>
             <td style="width: 15%; text-align: right; vertical-align: middle; white-space: nowrap;">
+                {{#iff item.system.ammocap '>' 0}}
                 <input name="weaponAmmocount{{id}}" type="text" value="{{item.system.ammocount}}" data-field="system.ammocount" style="width: 1.5em; text-align: right; padding: 0;"/>/{{item.system.ammocap}}
-                {{!-- TODO add ammo reload --}}
-                <a class="item-control weapon-ammo-reload" data-skill="" data-item-id="{{this.id}}" title=""><i class="fas fa-rotate-right"></i></a>
+                <a class="item-control weapon-ammo-reload" data-item-uuid="{{item.uuid}}" title="{{localize "shadowrun6.weapon.reload_ammo"}}"><i class="fas fa-rotate-right"></i></a>
+                {{/iff}}
             </td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
          	    <label class="item-pool" data-skill="{{item.system.skill}}" data-skillspec="{{item.system.skillSpec}}">{{item.system.pool}}</label>
@@ -149,9 +150,10 @@
                 <label class="middle-column" >{{attackrating item.calculated.attackRating}}</label>
             </td>
             <td style="width: 15%; text-align: right; vertical-align: middle; white-space: nowrap;">
+                {{#iff item.system.ammocap '>' 0}}
                 <input name="weaponAmmocount{{id}}" type="text" value="{{item.system.ammocount}}" data-field="system.ammocount" style="width: 1.5em; text-align: right; padding: 0;"/>/{{item.system.ammocap}}
-                {{!-- TODO add ammo reload --}}
-                <a class="item-control weapon-ammo-reload" data-skill="" data-item-id="{{this.id}}" title=""><i class="fas fa-rotate-right"></i></a>
+                <a class="item-control weapon-ammo-reload" data-item-uuid="{{item.uuid}}" title="{{localize "shadowrun6.weapon.reload_ammo"}}"><i class="fas fa-rotate-right"></i></a>
+                {{/iff}}
             </td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
                 <label class="item-pool" data-skill="{{item.system.skill}}">{{item.system.pool}}</label>
