Fix ammocap of weapon Items to be numbers instead of strings (#6)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -107,23 +107,19 @@ tfoot th {
 .game .centered {
 	text-align: center;
 }
+.shadowrun6 input[type="number"],
 .shadowrun6 input[type="text"]{
         font-variant-numeric: lining-nums;
         border: 0px solid black;
         background: none;
         color: var(--input-color);
-
-
         padding: 2px;
         padding-bottom: 2px;
         margin: 0;
-
         vertical-align: baseline;
-
         display: inline-block;
         height: 100%;
         border-radius: 4px;
-
  }
  .shadowrun6 .input-symbol-nuyen {
   position: relative;
