Fix hint for Active Effects that apply to Items (#3)

--- a/templates/sheets/active-effect/v12-config.html
+++ b/templates/sheets/active-effect/v12-config.html
@@ -118,25 +118,19 @@
                     {{#each labels.usage_tips as |tip i|}}
                     <li>{{{localize (concat "shadowrun6.active_effect.usage_tips." i) }}}</li>
                     {{/each}}
+                    {{#if isItemEffect}}
+                    <li>{{{localize "shadowrun6.active_effect.item_tip"}}}</li>
+                    {{/if}}
                 </ul>
                 <p>{{localize "shadowrun6.active_effect.more_info"}} <a href="https://foundryvtt.com/article/active-effects/">FoundryVTT.com Active Effects</a></p>
             </div>
-            {{#if isItemEffect}}
-            <div class="form-group">
-                <label>{{ labels.transfer.name }}</label>
-                <div class="form-fields">
-                    <input type="checkbox" name="transfer" {{checked data.transfer}}/>
-                </div>
-                <p class="hint">{{ labels.transfer.hint }} {{{localize "shadowrun6.active_effect.item_hint"}}}</p>
-            </div>
-            {{/if}}
             <div class="form-group">
                 <label>{{localize "shadowrun6.active_effect.advanced"}}</label>
                 <div class="form-fields"><input type="checkbox" name="system.advanced" class="advanced-active-effects" {{#if data.system.advanced}}checked{{/if}} /></div>
-                <p class="hint">{{localize "shadowrun6.active_effect.advanced_hint
-                    "}}</p>
+                <p class="hint">{{localize "shadowrun6.active_effect.advanced_hint"}}</p>
             </div>
         </div>
+
         <header class="effect-change effects-header flexrow">
             <div class="key">{{ localize "EFFECT.ChangeKey" }}</div>
             <div class="mode">{{ localize "EFFECT.ChangeMode" }}</div>
